# fastapi-vue-sse-chatbot

./: README.md  docker-compose.yml
services/backend/: Dockerfile  pyproject.toml
services/backend/src/: main.py  settings.py
services/backend/src/modules/: __init__.py
services/backend/src/modules/accounts/: __init__.py  controllers.py  models.py  router.py
services/backend/src/modules/accounts/controllers/: authenticate.py
services/backend/src/modules/conversations/: __init__.py  controllers.py  models.py  router.py
services/backend/src/modules/conversations/controllers/: __init__.py  create_new.py  remove_all.py  remove_one.py  retrieve_all.py  retrieve_one.py  update_one.py
services/backend/src/modules/events/: __init__.py  pubsub.py  router.py
services/backend/src/modules/messages/: models.py
services/backend/src/shared/: __init__.py
services/backend/src/shared/auth/: router.py  shibboleth.py  types.py
services/backend/src/shared/auth/controllers/: __init__.py  authenticate.py  login.py  logout.py
services/backend/src/shared/auth/middleware/: verify_account.py
services/backend/src/shared/clients/: http_client.py  open_ai_client.py  redis_client.py
services/backend/src/shared/database/: postgres.py
services/frontend/: package-lock.json
services/frontend/src/: App.vue
