[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Derek Bruckner <dbrucknr@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
uvloop = "^0.19.0"
httptools = "^0.6.1"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
itsdangerous = "^2.2.0"
openai = "^1.25.1"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.18"
authlib = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
